изменяет язsr страницы, добавляет размеры картинок, изменяет описание картинок

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,13 +19,13 @@
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">
-                    <img src="./images/mail.svg" alt="mail icon">
+                    <img src="./images/mail.svg" alt="иконка почты">
                     info@devstudio.com
                 </a>
             </li>
             <li>
                 <a href="tel:+380961111111">
-                    <img src="./images/phone.svg" alt="phone icon">
+                    <img src="./images/phone.svg" alt="иконка телефона">
                     +380961111111
                 </a>
             </li>
@@ -42,28 +42,28 @@
             <h2>Наши преимущества</h2>
             <ul>
                 <li>
-                    <img src="./images/Vector(1).svg" alt="antenna">
+                    <img src="./images/Vector(1).svg" alt="антенна">
                     <h3>Внимание к деталям</h3>
                     <p>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(2).svg" alt="clock">
+                    <img src="./images/Vector(2).svg" alt="часы">
                     <h3>Пунктуальность</h3>
                     <p>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(3).svg" alt="diagram">
+                    <img src="./images/Vector(3).svg" alt="диаграмма">
                     <h3>Планирование</h3>
                     <p>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(4).svg" alt="astronaut">
+                    <img src="./images/Vector(4).svg" alt="астронавт">
                     <h3>Современные технологии</h3>
                     <p>
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -77,19 +77,19 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/box.png" alt="">
+                        <img src="./images/nout.png" width="370" height="294" alt="ноутбук">
                         <h3>Десктопные приложения</h3>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/box.png" alt="">
+                        <img src="./images/phone.png" width="370" height="294" alt="телефон">
                         <h3>Мобильные приложения</h3>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/box.png" alt="">
+                        <img src="./images/pc.png" width="370" height="294" alt="компьютер">
                         <h3>Дизайнерские решения</h3>
                     </a>
                 </li>
@@ -100,7 +100,7 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/portrait.png" alt="John Smith">
+                    <img src="./images/portrait1.png" width="270" height="260" alt="John Smith">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
@@ -127,7 +127,7 @@
                     </ul>
                 </li>
                 <li>
-                    <img src="./images/portrait.png" alt="Marta Stewart">
+                    <img src="./images/portrait2.png" width="270" height="260" alt="Marta Stewart">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
@@ -154,7 +154,7 @@
                     </ul>
                 </li>
                 <li>
-                    <img src="./images/portrait.png" alt="Robert Jakis">
+                    <img src="./images/portrait3.png" width="270" height="260" alt="Robert Jakis">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
@@ -181,7 +181,7 @@
                     </ul>
                 </li>
                 <li>
-                    <img src="./images/portrait.png" alt="Martin Doe">
+                    <img src="./images/portrait4.png" width="270" height="260" alt="Martin Doe">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
