--- a/index.html
+++ b/index.html
@@ -104,26 +104,10 @@
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
-                        <li>
-                            <a href="">
-                                <img src="./images/instagram.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/twitter.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/facebook.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/linkedin.svg" alt="linkedin">
-                            </a>
-                        </li>
+                        <li><a href="" aria-label="ссылка на instagram">instagram</a></li>
+                        <li><a href="" aria-label="ссылка на twitter">twitter</a></li>
+                        <li><a href="" aria-label="ссылка на facebook">facebook</a></li>
+                        <li><a href="" aria-label="ссылка на linkedin">linkedin</a></li>
                     </ul>
                 </li>
                 <li>
@@ -131,26 +115,10 @@
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
-                        <li>
-                            <a href="">
-                                <img src="./images/instagram.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/twitter.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/facebook.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/linkedin.svg" alt="linkedin">
-                            </a>
-                        </li>
+                        <li><a href="" aria-label="ссылка на instagram">instagram</a></li>
+                        <li><a href="" aria-label="ссылка на twitter">twitter</a></li>
+                        <li><a href="" aria-label="ссылка на facebook">facebook</a></li>
+                        <li><a href="" aria-label="ссылка на linkedin">linkedin</a></li>
                     </ul>
                 </li>
                 <li>
@@ -158,26 +126,10 @@
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
-                        <li>
-                            <a href="">
-                                <img src="./images/instagram.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/twitter.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/facebook.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/linkedin.svg" alt="linkedin">
-                            </a>
-                        </li>
+                        <li><a href="" aria-label="ссылка на instagram">instagram</a></li>
+                        <li><a href="" aria-label="ссылка на twitter">twitter</a></li>
+                        <li><a href="" aria-label="ссылка на facebook">facebook</a></li>
+                        <li><a href="" aria-label="ссылка на linkedin">linkedin</a></li>
                     </ul>
                 </li>
                 <li>
@@ -185,26 +137,10 @@
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
-                        <li>
-                            <a href="">
-                                <img src="./images/instagram.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/twitter.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/facebook.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./images/linkedin.svg" alt="linkedin">
-                            </a>
-                        </li>
+                        <li><a href="" aria-label="ссылка на instagram">instagram</a></li>
+                        <li><a href="" aria-label="ссылка на twitter">twitter</a></li>
+                        <li><a href="" aria-label="ссылка на facebook">facebook</a></li>
+                        <li><a href="" aria-label="ссылка на linkedin">linkedin</a></li>
                     </ul>
                 </li>
             </ul>
