--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="/">Web Studio</a>
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -42,28 +42,28 @@
             <h2>Наши преимущества</h2>
             <ul>
                 <li>
-                    <img src="./images/Vector(1).svg" alt="антенна">
+                    <img src="./images/vector1.svg" alt="антенна">
                     <h3>Внимание к деталям</h3>
                     <p>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(2).svg" alt="часы">
+                    <img src="./images/vector2.svg" alt="часы">
                     <h3>Пунктуальность</h3>
                     <p>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(3).svg" alt="диаграмма">
+                    <img src="./images/vector3.svg" alt="диаграмма">
                     <h3>Планирование</h3>
                     <p>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <img src="./images/Vector(4).svg" alt="астронавт">
+                    <img src="./images/vector4.svg" alt="астронавт">
                     <h3>Современные технологии</h3>
                     <p>
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -151,32 +151,32 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/Client1.svg" alt="Логотип компании">
+                        <img src="./images/client1.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Client2.svg" alt="Логотип компании">
+                        <img src="./images/client2.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Client3.svg" alt="Логотип компании">
+                        <img src="./images/client3.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Client4.svg" alt="Логотип компании">
+                        <img src="./images/client4.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Client5.svg" alt="Логотип компании">
+                        <img src="./images/client5.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Client6.svg" alt="Логотип компании">
+                        <img src="./images/client6.svg" alt="Логотип компании">
                     </a>
                 </li>
             </ul>
@@ -184,7 +184,21 @@
     </main>
     <!-- Подвал сайта -->
     <footer>
-
+        <a href="/">Web Studio</a>
+        <address>
+                г. Киев, пр-т Леси Украинки, 26 <br/>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+        <p><b>присоединяйтесь</b></p>
+        <ul>
+            <li><a href="" aria-label="ссылка на instagram">instagram</a></li>
+            <li><a href="" aria-label="ссылка на twitter">twitter</a></li>
+            <li><a href="" aria-label="ссылка на facebook">facebook</a></li>
+            <li><a href="" aria-label="ссылка на linkedin">linkedin</a></li>
+        </ul>
+        <p><b>Подпишитесь на рассылку</b></p>
+        <p>&#169;2020 | Developed by GoIT Students</p>
     </footer>
 </body>
 </html>
